[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/RobotoSlab-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://hub.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="hub" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="questionLabel" type="Label" parent="."]
margin_left = 9.28906
margin_top = 548.629
margin_right = 154.288
margin_bottom = 596.629
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.980392, 0.980392, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="progressBar" type="ProgressBar" parent="."]
margin_left = 247.245
margin_top = 4.90033
margin_right = 785.245
margin_bottom = 26.9003
__meta__ = {
"_edit_use_anchors_": false
}

[node name="checkPointTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="resultLabel" type="Label" parent="."]
margin_left = 154.929
margin_top = 549.0
margin_right = 229.929
margin_bottom = 598.0
custom_fonts/font = SubResource( 2 )
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
